--- a/app/views/lists/index.html.erb
+++ b/app/views/lists/index.html.erb
@@ -1,9 +1,5 @@
 <div class="row">
-  <div class="col-sm-6">
-    <h1>Lists</h1>
-  </div>
-
-  <div class="col-sm-6 text-right">
+  <div class="col">
   <%= link_to new_list_path, class: 'btn btn-primary' do %>
     Add New List
   <% end %>
