--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,5 +1,5 @@
 <footer class="footer text-muted bg-light">
-  <div class="container">
+  <div class="container-fluid">
     <span>© <%= Date.today.year %> Your Company</span>
     <ul class="list-inline mb-0 float-right">
       <li class="list-inline-item mr-3"><%= link_to "Terms", terms_path %></li>
