--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,7 +8,7 @@
     <%= render 'shared/navbar' %>
     <%= render 'shared/notices' %>
 
-    <div class="container-fluid">
+    <div class="container-fluid mt-3">
       <%= yield %>
     </div>
 
